minor changes in notebooks

--- a/notebooks/nb_93_imitation_learning.ipynb
+++ b/notebooks/nb_93_imitation_learning.ipynb
@@ -269,7 +269,7 @@
     "\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.random\n",
     "DATA_SET_IDENTIFIER_II = \"_random_exercise_I_nb_93\"\n",
-    "NUM_STEPS_II = 50000"
+    "NUM_STEPS_II = 5000"
    ]
   },
   {
@@ -778,6 +778,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "What about observations and actions: Give a look to the [manual](https://arxiv.org/pdf/1304.1672)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Exercise III"
    ]
   },
@@ -867,6 +874,8 @@
     "NUM_STEPS_II = 7000\n",
     "DATA_SET_NAME_III = \"torcs_suboptimal\"\n",
     "NUM_STEPS_III = 10000\n",
+    "DATA_SET_NAME_IV = \"torcs_expert_reduced\"\n",
+    "NUM_STEPS_IV = 2000\n",
     "\n",
     "\n",
     "config_minari_data_I_and_II = create_combined_minari_dataset(\n",
@@ -878,14 +887,23 @@
     ")\n",
     "\n",
     "\n",
-    "config_minari_suboptimal = create_minari_datasets(\n",
-    "    env_name = ENV_NAME,\n",
-    "    dataset_name = DATA_SET_NAME_III,\n",
-    "    num_colected_points = NUM_STEPS_III,\n",
-    "    behavior_policy_name = BEHAVIOR_POLICY_III,\n",
+    "config_minari_data_III_and_IV = create_combined_minari_dataset(\n",
+    "    env_name=ENV_NAME,\n",
+    "    dataset_names=(DATA_SET_NAME_III, DATA_SET_NAME_IV),\n",
+    "    num_collected_points=(NUM_STEPS_III, NUM_STEPS_IV),\n",
+    "    behavior_policy_names=(BEHAVIOR_POLICY_III, BEHAVIOR_POLICY_II),\n",
+    "    combined_dataset_identifier=\"torcs_driver_suboptimal_and_expert\",\n",
     ")\n",
     "\n",
-    "collected_datasets_names = [config_minari_data_I_and_II.data_set_name] + config_minari_data_I_and_II.children_dataset_names + [config_minari_suboptimal.data_set_name]\n",
+    "\n",
+    "#config_minari_suboptimal = create_minari_datasets(\n",
+    "#    env_name = ENV_NAME,\n",
+    "#    dataset_name = DATA_SET_NAME_III,\n",
+    "#    num_colected_points = NUM_STEPS_III,\n",
+    "#    behavior_policy_name = BEHAVIOR_POLICY_III,\n",
+    "#)\n",
+    "\n",
+    "collected_datasets_names = [config_minari_data_I_and_II.data_set_name] + config_minari_data_I_and_II.children_dataset_names + [config_minari_data_III_and_IV.data_set_name]\n",
     "\n",
     "\n",
     "_ = os.system(\"pkill torcs\")"
@@ -915,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collected_datasets_names = [\"torcs-torcs_driver_expert_and_expert_plus_noise-v0\", \"torcs-torcs_expert_and_noise-v0\", \"torcs-torcs_expert-v0\", \"torcs-torcs_suboptimal-v0\"]\n",
+    "#collected_datasets_names = [\"torcs-torcs_driver_expert_and_expert_plus_noise-v0\", \"torcs-torcs_expert_and_noise-v0\", \"torcs-torcs_expert-v0\", \"torcs-torcs_driver_suboptimal_and_expert-v0\"]\n",
     "collected_datasets = widget_list(collected_datasets_names)"
    ]
   },
@@ -1096,7 +1114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DATA_SET_SUBOPTIMAL_NAME = \"torcs-torcs_suboptimal-v0\"\n",
+    "DATA_SET_SUBOPTIMAL_NAME = \"torcs-torcs_driver_suboptimal_and_expert-v0\"\n",
     "POLICY_NAME_EXERCISE_III_B = \"policy_bc.pt\"\n",
     "OFFLINE_POLICY_NAME = PolicyName.imitation_learning_torcs\n",
     "DEVICE = \"cuda\"\n",
