--- a/notebooks/nb_96_Offline_RL_part_II.ipynb
+++ b/notebooks/nb_96_Offline_RL_part_II.ipynb
@@ -197,6 +197,7 @@
     "\\tag{3}\n",
     "\\end{equation}\n",
     "$\n",
+    "with $A^{\\pi_\\beta}(s, a) = Q^{\\pi_\\beta}(s, a) -V^{\\pi_\\beta}(s)$ .\n",
     "\n",
     "The math to arrive at eq.3 is somewhat involved (see ref.1), but we can gain an intuitive understanding of its purpose. Eq.3 can be qualitatively understood as depicted in the figure below.\n",
     "\n",
@@ -288,8 +289,6 @@
     "$$\n",
     "\n",
     "The main idea is to choose a new policy $\\mu(a|s)$ that will try to find the actions $a$ that maximize our DNN $Q_\\theta$ values while at the same time we try to minimize the Q function on the $\\theta$ parameter space. This effect will be particularly important in actions that are o.o.d. that are the ones that are overestimate in general as we saw before \n",
-    "\n",
-    "( ToDo: --> Explain this better and say that in-distribution data is estimate correctly through the evaluation approach that include only data from D)\n",
     "\n",
     "This is rigorously demonstrated in the CQL paper, where they establish that the solution to eq.9 provides a lower bound for Q(s,a). The policy $\\mu$ doesn't necessarily have to be proportional to $\\pi(a|s)$, but it should aim to maximize Q(s,a) consistently. We will explore various options for this later on."
    ]
