--- a/notebooks/nb_97_Offline_rl_algorithms_exercises-revised_version.ipynb
+++ b/notebooks/nb_97_Offline_rl_algorithms_exercises-revised_version.ipynb
@@ -122,14 +122,14 @@
     "\n",
     "## Exercise I\n",
     "\n",
-    "**Similarly as we did in the offpolicy notebook (nb_95) we will collect a few amount of expert data and a larger amount of suboptimal data .... and we will see how the two offline rl algorithms introduce before, BCQ and CQL, are able to recover the expert policy without going o.o.d. We will compare our results with the imitation learning approach, in particular with the BC algorithm, that as we saw in the imitation learning section (nb_93) is another valid option, as far as you have expert data.**\n",
+    "**Similarly as we did in the offpolicy notebook (nb_95) we will collect a few amount of expert data and a larger amount of suboptimal data, and we will see how the two offline rl algorithms introduce before, BCQ and CQL, are able to recover the expert policy without going o.o.d. We will compare our results with the imitation learning approach, in particular with the BC algorithm, that as we saw in the imitation learning section (nb_93) is another valid option, as far as you have expert data.**\n",
     "\n",
     "\n",
     "In this exercise we will collect two datasets with expert and suboptimal data that tries to bring the agent from (3,0) to (0,7) .\n",
     "\n",
-    "I  - **Suboptimal expert policy**:  collect ~ 2000 steps\n",
+    "I  - **Suboptimal expert policy**:  collect ~ 500 steps\n",
     "\n",
-    "II - **expert policy**: collect ~ 500 steps"
+    "II - **expert policy**: collect ~ 100 steps"
    ]
   },
   {
@@ -147,11 +147,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "obstacle_selected = widget_list([ObstacleTypes.obstacle_8x8_top_right, ObstacleTypes.obst_free_8x8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
     "\n",
     "# Grid configuration\n",
-    "OBSTACLE = ObstacleTypes.obstacle_8x8_top_right\n",
-    "INITIAL_STATE = (3, 0)\n",
+    "OBSTACLE = obstacle_selected.value\n",
+    "INITIAL_STATE = (7, 0)\n",
     "FINAL_STATE = (0, 7)\n",
     "\n",
     "env_2D_grid_initial_config = Grid2DInitialConfig(\n",
@@ -177,13 +186,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_suboptimal_rnd_initial_3_0_final_3_7\n",
+    "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_move_up_from_bottom_twice\n",
     "DATA_SET_IDENTIFIER_I = \"_suboptimal_for_offline_rl\"\n",
     "NUM_STEPS_I = 500\n",
     "\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_suboptimal_determ_initial_3_0_final_3_7\n",
     "DATA_SET_IDENTIFIER_II = \"_expert_for_offline_rl\"\n",
-    "NUM_STEPS_II = 500"
+    "NUM_STEPS_II = 100"
    ]
   },
   {
@@ -316,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_EPOCHS =10\n",
+    "NUM_EPOCHS = 10\n",
     "BATCH_SIZE = 128\n",
     "STEP_PER_EPOCH = 1.0*len_buffer\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -326,7 +335,7 @@
     "    name_expert_data=selected_data_set.value,\n",
     "    policy_name=selected_offline_rl_policy.value,\n",
     "    render_mode=render_mode,\n",
-    "    device=\"cuda\"\n",
+    "    device=\"cpu\"\n",
     ")\n",
     "\n",
     "offline_training(\n",
@@ -363,7 +372,7 @@
    "source": [
     "#SAVED_POLICY_NAME = \"policy_best_reward.pth\"\n",
     "SAVED_POLICY_NAME = \"policy.pth\"\n",
-    "INITIAL_STATE = (3, 0)\n",
+    "INITIAL_STATE = (7, 0)\n",
     "FINAL_STATE = (0, 7)\n",
     "\n",
     "offline_policy_config = TrainedPolicyConfig(\n",
@@ -399,33 +408,22 @@
    "source": [
     "**Now that your policies are trained let's do some analysis:**\n",
     "\n",
-    "1 - Train a BCQ and a CQL policies and see if they are able to learn the expert data.\n",
+    "1 - Are BCQ and the CQL policies able to learn the expert data?\n",
     "\n",
-    "2 - As we saw imitation learning is quite good when you have expert data. Train a BC policy and compare with the \n",
-    "offline methods. (Answer: All of the reproduce expert data)\n",
+    "2 - As we saw before, imitation learning is a good option when you have expert data. How it compares with the offline algorithms?\n",
     "\n",
     "3 - Now rollout the three policies from o.o.d. data. What do you observe?\n",
-    "(Answer: Offpolicy ones are better to come-back to in-distribution ---> Why??)\n",
     "\n",
     "4 - Remove the obstacle and do a rollout of the three policies. What do you observe?\n",
-    "(Answer: BC goes totally o.o.d.)\n",
     "\n",
-    "5 - Use now the combined dataset that includes a fair amount of noise. What do you notice what happens with the policiey? ---> Mybe BS --> See Levine discussion about noisy data but critical states ......\n",
-    "\n",
-    "(Answer: BC doesn't do a good job to imitate the expert data as it copy the noise. BCQ and CQL are able to separate noise from expert data --> Not what is happening so far!!!\n",
-    "\n",
-    "It should happens that BC get confused and BCQ/CQL get an even better trajectory as they collect feedback from the reward...\n",
-    "\n",
-    ")\n"
+    "5 - Remove now the obstacle and use the combined dataset that includes a fair amount of suboptimal data. What do you notice? "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise II \n",
-    "\n",
-    "TODO --> BUG: It seems there was a bug as the env used to collect it uses always same initial_state --> corrected now but check that everything works!"
+    "## Exercise II "
    ]
   },
   {
@@ -503,15 +501,15 @@
     "IDENTIFIER_COMBINED_DATASETS = \"_stiching_property_I\"\n",
     "\n",
     "# Dataset I\n",
-    "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_moves_downwards_within_strip\n",
+    "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_grid_deterministic_0_0_to_4_7\n",
     "DATA_SET_IDENTIFIER_I = \"_move_downwards\"\n",
-    "NUM_STEPS_I = 20000\n",
+    "NUM_STEPS_I = 200\n",
     "\n",
     "# Dataset II\n",
     "#BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "DATA_SET_IDENTIFIER_II = \"_move_deterministic\"\n",
-    "NUM_STEPS_II = 1000"
+    "NUM_STEPS_II = 200"
    ]
   },
   {
@@ -529,6 +527,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "env_2D_grid_initial_config = env_2D_grid_initial_config_I if select_policy_to_render.value == BEHAVIOR_POLICY_I else env_2D_grid_initial_config_II\n",
+    "\n",
     "offpolicy_rendering(\n",
     "    env_or_env_name=ENV_NAME,\n",
     "    render_mode=render_mode,\n",
@@ -652,19 +652,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "available_obstacles = [ObstacleTypes.obstacle_8x8_top_right, ObstacleTypes.obst_free_8x8]\n",
-    "selected_obstacle = widget_list(available_obstacles)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "#SAVED_POLICY_NAME = \"policy_best_reward.pth\"\n",
     "SAVED_POLICY_NAME = \"policy.pth\"\n",
-    "INITIAL_STATE = (3, 0)\n",
-    "FINAL_STATE = (0, 7)\n",
+    "INITIAL_STATE = (0, 0)\n",
+    "FINAL_STATE = (7, 7)\n",
     "\n",
     "offline_policy_config = TrainedPolicyConfig(\n",
     "    name_expert_data=selected_data_set.value,\n",
@@ -678,7 +669,6 @@
     "log_path = get_trained_policy_path(log_name)\n",
     "policy.load_state_dict(torch.load(os.path.join(log_path, SAVED_POLICY_NAME), map_location=\"cpu\"))\n",
     "\n",
-    "env.set_new_obstacle_map(selected_obstacle.value.value)\n",
     "env.set_starting_point(INITIAL_STATE)\n",
     "env.set_goal_point(FINAL_STATE)\n",
     "#snapshot_env(env)\n",
@@ -728,7 +718,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collected_datasets_names = [\"torcs-torcs_suboptimal-v0\"]\n",
+    "os.system(\"torcs\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collected_datasets_names = [\"torcs-torcs_driver_suboptimal_and_expert-v0\"]\n",
     "collected_datasets = widget_list(collected_datasets_names)"
    ]
   },
@@ -738,7 +737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NUM_EPOCHS = 4\n",
+    "NUM_EPOCHS = 15\n",
     "BATCH_SIZE = 128\n",
     "NUMBER_TEST_ENVS = 1\n",
     "EXPLORATION_NOISE = True\n",
@@ -811,7 +810,7 @@
     "    env_or_env_name=\"torcs\",\n",
     "    render_mode=None,\n",
     "    policy_model=trained_bcq_policy,\n",
-    "    num_frames=5000,\n",
+    "    num_frames=10000,\n",
     ")"
    ]
   },
