--- a/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
+++ b/notebooks/nb_95_Offpolicy_distributional_shift_exercises.ipynb
@@ -93,6 +93,7 @@
     "                                          state_action_histogram)\n",
     "from training_rl.offline_rl.visualizations.utils import (\n",
     "    get_state_action_data_and_policy_grid_distributions, snapshot_env)\n",
+    "from training_rl.offline_rl.utils import load_buffer_minari, widget_list\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "register_grid_envs()\n",
@@ -161,14 +162,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **SOLUTION:**"
+    "**SOLUTION:**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create the environment"
+    "**Create the environment**"
    ]
   },
   {
@@ -203,7 +204,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Configure and rendering policies"
+    "**Configure and rendering policies**"
    ]
   },
   {
@@ -218,15 +219,21 @@
    "outputs": [],
    "source": [
     "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_eps_greedy_4_0_to_7_7\n",
-    "# ToDo: CHANGE !!!!!!!!!\n",
-    "#BEHAVIOR_POLICY_I = BehaviorPolicyType.random\n",
     "DATA_SET_IDENTIFIER_I = \"_suboptimal\"\n",
-    "# TODO: CHANGE !!!!!!!\n",
-    "NUM_STEPS_I = 100000\n",
+    "NUM_STEPS_I = 8000\n",
     "\n",
     "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
     "DATA_SET_IDENTIFIER_II = \"_expert\"\n",
     "NUM_STEPS_II = 1000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "select_policy_to_render = widget_list([BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II])"
    ]
   },
   {
@@ -240,27 +247,10 @@
    },
    "outputs": [],
    "source": [
-    "# Suboptimal policy\n",
     "offpolicy_rendering(\n",
     "    env_or_env_name=ENV_NAME,\n",
     "    render_mode=render_mode,\n",
-    "    behavior_policy_name=BEHAVIOR_POLICY_I,\n",
-    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
-    "    num_frames=100,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Expert policy\n",
-    "offpolicy_rendering(\n",
-    "    env_or_env_name=ENV_NAME,\n",
-    "    render_mode=render_mode,\n",
-    "    behavior_policy_name=BEHAVIOR_POLICY_II,\n",
+    "    behavior_policy_name=select_policy_to_render.value,\n",
     "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
     "    num_frames=100,\n",
     ")"
@@ -270,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create single Minari dataset"
+    "**Create single Minari dataset"
    ]
   },
   {
@@ -305,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### check state-action distribution"
+    "**check state-action distribution**"
    ]
   },
   {
@@ -336,7 +326,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### offline policy training"
+    "**offline policy training**"
    ]
   },
   {
@@ -377,7 +367,7 @@
     "\n",
     "NUM_EPOCHS = 4\n",
     "BATCH_SIZE = 128\n",
-    "STEP_PER_EPOCH = 0.1*data_size\n",
+    "STEP_PER_EPOCH = 0.7*data_size\n",
     "\n",
     "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
     "NUMBER_TEST_ENVS = 1\n",
@@ -393,31 +383,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-04-09T16:31:16.967266Z",
-     "start_time": "2024-04-09T16:31:16.967165Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# ToDo: Delete or not delete ???\n",
-    "\n",
-    "from training_rl.offline_rl.online_trainings.online_training import online_training\n",
-    "from training_rl.offline_rl.offline_policies.policy_registry import PolicyType\n",
-    "\n",
-    "online_training(\n",
-    "    trained_policy_config = offline_policy_config,\n",
-    "    policy_type = PolicyType.offpolicy,\n",
-    "    num_epochs=1,\n",
-    "    batch_size=64,\n",
-    "    restore_training=False,\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -428,7 +393,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Restore policy"
+    "**Restore policy**"
    ]
   },
   {
@@ -457,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Policy visualization"
+    "**Policy visualization**"
    ]
   },
   {
@@ -485,17 +450,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### State-action policy distribution"
+    "**State-action policy distribution**"
    ]
   },
   {
@@ -561,302 +519,6 @@
     "    num_frames=100,\n",
     "    imitation_policy_sampling=False\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**2 - Try now with the original problem and try one of the offline RL algorithms that we will introduce later:  BCQ.**\n",
-    "\n",
-    "What happens now?\n",
-    "\n",
-    "BCQ as all the offline RL algorithms has tuning parameters to control o.o.d data. They are typically tune to some empirical values that solve a huge range of tasks but in general these are important parameters you will need to tune in your experiments."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Off-Policy Distributional Shift - II"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise I\n",
-    "\n",
-    "**In this notebook we will deal with another important property that we should fulfill with a robust offline RL algorithm, the stitching, i.e. the reuse of different trajectories contain in the data to obtain the best trajectory in our dataset.**\n",
-    "\n",
-    "\n",
-    "The goal will be to reach a target at (7,7) starting from (0,0). We will use again the 8x8 grid environment. Our dataset contains trajectories covering our space of interest but generated for different tasks (note that before we collected data for the same task) . One is a suboptimal policy that moves the agent from (0,0) to (7,0) and the other is a deterministic an optimal one (human expert) that brings the agent from (4,0) to (7,7). We have obviously much more data coming from the suboptimal policy than the expert one as it is cheaper.\n",
-    "\n",
-    "So we will create the two policies:\n",
-    "\n",
-    "I  - **Suboptimal expert policy** (behavior_8x8_moves_downwards_within_strip):  moves agent in suboptimal way downwards starting from (0,0) (collect 8000 steps)\n",
-    "\n",
-    "II - **Optimal expert policy**(behavior_8x8_deterministic_4_0_to_7_7): moves agent in the optimal path from (4,0) to (7,7) (collect 1000 steps)\n",
-    "\n",
-    "\n",
-    "In this example we will use again as off-policy RL algorithm, the Deep Q-Network (DQN) algorithm.\n",
-    "\n",
-    "**Let's setup our configuration and create the environment**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Environment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ENV_NAME = CustomEnv.Grid_2D_8x8_discrete\n",
-    "\n",
-    "# Grid configuration\n",
-    "OBSTACLE = ObstacleTypes.vertical_object_8x8\n",
-    "INITIAL_STATE = (0, 0)\n",
-    "FINAL_STATE = (7, 7)\n",
-    "\n",
-    "env_2D_grid_initial_config = Grid2DInitialConfig(\n",
-    "    obstacles=OBSTACLE,\n",
-    "    initial_state=INITIAL_STATE,\n",
-    "    target_state=FINAL_STATE,\n",
-    ")\n",
-    "\n",
-    "env = InitialConfigCustom2DGridEnvWrapper(gym.make(ENV_NAME, render_mode=render_mode), env_config=env_2D_grid_initial_config)\n",
-    "snapshot_env(env)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Configure the two datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "DATA_SET_IDENTIFIER_I = \"_downwards_\"\n",
-    "BEHAVIOR_POLICY_I = BehaviorPolicyType.behavior_8x8_moves_downwards_within_strip\n",
-    "NUM_STEPS_I = 8000\n",
-    "\n",
-    "DATA_SET_IDENTIFIER_II = \"_optimal_\"\n",
-    "BEHAVIOR_POLICY_II = BehaviorPolicyType.behavior_8x8_deterministic_4_0_to_7_7\n",
-    "NUM_STEPS_II = 1000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create combined Minari dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config_combined_data = create_combined_minari_dataset(\n",
-    "        env_name=ENV_NAME,\n",
-    "        dataset_identifiers = (DATA_SET_IDENTIFIER_I, DATA_SET_IDENTIFIER_II),\n",
-    "        num_collected_points = (NUM_STEPS_I, NUM_STEPS_II),\n",
-    "        behavior_policy_names = (BEHAVIOR_POLICY_I, BEHAVIOR_POLICY_II),\n",
-    "        combined_dataset_identifier = \"_stiching\",\n",
-    "        env_2d_grid_initial_config = env_2D_grid_initial_config,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Rendering behavioral policy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Suboptimal policy\n",
-    "\n",
-    "offpolicy_rendering(\n",
-    "    env_or_env_name=ENV_NAME,\n",
-    "    render_mode=render_mode,\n",
-    "    behavior_policy_name=BEHAVIOR_POLICY_I,\n",
-    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
-    "    num_frames=100,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Expert policy\n",
-    "offpolicy_rendering(\n",
-    "    env_or_env_name=ENV_NAME,\n",
-    "    render_mode=render_mode,\n",
-    "    behavior_policy_name=BEHAVIOR_POLICY_II,\n",
-    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
-    "    num_frames=100,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### State-action distribution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "name_combined_dataset = config_combined_data.data_set_name\n",
-    "\n",
-    "#Create Buffers with minari datasets\n",
-    "buffer_data = load_buffer_minari(name_combined_dataset)\n",
-    "data_size = len(buffer_data)\n",
-    "\n",
-    "# Compute state-action data distribution\n",
-    "state_action_count_data, _ = get_state_action_data_and_policy_grid_distributions(buffer_data, env)\n",
-    "state_action_histogram(state_action_count_data, title=\"State-Action data distribution\", inset_pos_xy=(-0.1, -0.012))\n",
-    "\n",
-    "snapshot_env(env)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Policy to train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "POLICY_NAME = PolicyName.dqn\n",
-    "\n",
-    "NAME_EXPERT_DATA = name_combined_dataset\n",
-    "# TrainedPolicyConfig is a handy object that will help us to deal with the policy configuration data.\n",
-    "offline_policy_config = TrainedPolicyConfig(\n",
-    "    name_expert_data=NAME_EXPERT_DATA,\n",
-    "    policy_name=POLICY_NAME,\n",
-    "    render_mode=render_mode,\n",
-    "    device=\"cpu\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run the training\n",
-    "NUM_EPOCHS = 20\n",
-    "BATCH_SIZE = 128\n",
-    "STEP_PER_EPOCH = 0.1*data_size\n",
-    "\n",
-    "# After every epoch we will collect some test statistics from the policy from NUMBER_TEST_ENVS independent envs.\n",
-    "NUMBER_TEST_ENVS = 1\n",
-    "\n",
-    "\n",
-    "offline_training(\n",
-    "    offline_policy_config=offline_policy_config,\n",
-    "    num_epochs = NUM_EPOCHS,\n",
-    "    step_per_epoch=STEP_PER_EPOCH,\n",
-    "    number_test_envs=NUMBER_TEST_ENVS,\n",
-    "    restore_training=False,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Restore policy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "POLICY_FILE = \"policy_best_reward.pth\"\n",
-    "\n",
-    "# restore a policy with the same configuration as the one we trained.\n",
-    "policy = restore_trained_offline_policy(offline_policy_config)\n",
-    "# load the weights\n",
-    "name_expert_data = offline_policy_config.name_expert_data\n",
-    "log_name = os.path.join(name_expert_data, POLICY_NAME)\n",
-    "log_path = get_trained_policy_path(log_name)\n",
-    "policy.load_state_dict(torch.load(os.path.join(log_path, POLICY_FILE), map_location=\"cpu\"))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Let's visualize the policy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "offpolicy_rendering(\n",
-    "    env_or_env_name=env,\n",
-    "    render_mode=render_mode,\n",
-    "    policy_model=policy,\n",
-    "    env_2d_grid_initial_config=env_2D_grid_initial_config,\n",
-    "    num_frames=100,\n",
-    "    imitation_policy_sampling=False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Questions:\n",
-    "\n",
-    "1 - What do you notice? What happens if you increase the expert data? Is it better?\n",
-    "\n",
-    "2 - Try again with the BCQ algorithm."
    ]
   }
  ],
