--- a/notebooks/nb_92_Data_Collection.ipynb
+++ b/notebooks/nb_92_Data_Collection.ipynb
@@ -3,12 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T18:57:59.047241Z",
-     "start_time": "2024-05-06T18:57:57.808998Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -22,12 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T18:57:59.059228Z",
-     "start_time": "2024-05-06T18:57:59.048394Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%presentation_style"
@@ -36,12 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T18:57:59.071940Z",
-     "start_time": "2024-05-06T18:57:59.059990Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%load_latex_macros"
@@ -50,52 +35,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T19:32:10.050468Z",
-     "start_time": "2024-05-06T19:32:10.021939Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%autoreload\n",
     "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
     "load_env_variables()\n",
     "\n",
-    "\n",
-    "import os\n",
-    "import random\n",
     "import warnings\n",
+    "import os\n",
     "\n",
     "import gymnasium as gym\n",
-    "import minari\n",
-    "import numpy as np\n",
-    "from minari import DataCollectorV0, StepDataCallback\n",
-    "\n",
     "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.obstacles_2D_grid_register import \\\n",
     "    ObstacleTypes\n",
     "from training_rl.offline_rl.custom_envs.custom_2d_grid_env.simple_grid import \\\n",
     "    Custom2DGridEnv\n",
-    "from training_rl.offline_rl.custom_envs.custom_envs_registration import (\n",
-    "    CustomEnv, RenderMode, register_grid_envs)\n",
-    "from training_rl.offline_rl.custom_envs.utils import (\n",
-    "    Grid2DInitialConfig, InitialConfigCustom2DGridEnvWrapper)\n",
-    "from training_rl.offline_rl.generate_custom_minari_datasets.utils import \\\n",
-    "    generate_compatible_minari_dataset_name\n",
+    "from training_rl.offline_rl.custom_envs.custom_envs_registration import RenderMode, register_grid_envs\n",
     "from training_rl.offline_rl.offline_policies.offpolicy_rendering import \\\n",
     "    offpolicy_rendering\n",
-    "from training_rl.offline_rl.utils import (delete_minari_data_if_exists,\n",
-    "                                          load_buffer_minari,\n",
-    "                                          one_hot_to_integer,\n",
-    "                                          state_action_histogram)\n",
-    "from training_rl.offline_rl.visualizations.utils import (\n",
-    "    get_state_action_data_and_policy_grid_distributions, snapshot_env)\n",
+    "from training_rl.offline_rl.utils import load_buffer_minari, state_action_histogram\n",
+    "from training_rl.offline_rl.visualizations.utils import get_state_action_data_and_policy_grid_distributions, snapshot_env\n",
     "from training_rl.offline_rl.utils import widget_list\n",
     "from training_rl.offline_rl.behavior_policies.behavior_policy_registry import BehaviorPolicyType\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import EnvFactory\n",
-    "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import \\\n",
-    "    create_minari_datasets\n",
-    "\n",
+    "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import create_minari_datasets\n",
+    "os.environ['MUJOCO_GL'] = 'egl'\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "# To get access to the registered environments.\n",
@@ -154,10 +118,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T20:00:44.764763Z",
-     "start_time": "2024-05-06T20:00:44.747071Z"
-    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -191,10 +151,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T20:00:46.734844Z",
-     "start_time": "2024-05-06T20:00:46.715804Z"
-    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -221,10 +177,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T20:03:20.020602Z",
-     "start_time": "2024-05-06T20:03:18.658070Z"
-    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -264,10 +216,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T20:03:20.514392Z",
-     "start_time": "2024-05-06T20:03:20.470428Z"
-    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -296,10 +244,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T20:03:24.027377Z",
-     "start_time": "2024-05-06T20:03:24.003192Z"
-    },
     "slideshow": {
      "slide_type": "slide"
     }
@@ -342,10 +286,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-05-06T20:11:42.170993Z",
-     "start_time": "2024-05-06T20:11:41.529595Z"
-    },
     "slideshow": {
      "slide_type": "slide"
     }
