Notebooks improvements and new images

--- a/notebooks/nb_90_IntroOfflineRL.ipynb
+++ b/notebooks/nb_90_IntroOfflineRL.ipynb
@@ -336,7 +336,12 @@
     }
    },
    "source": [
-    "## Program of the offline RL section\n",
+    "## Summary:\n",
+    "\n",
+    "To be done together.\n",
+    "\n",
+    "\n",
+    "### Program for the rest of the day:\n",
     "\n",
     "**2nd workshop day: Morning**\n",
     "\n",
@@ -405,7 +410,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "165px"
+    "width": "217.4px"
    },
    "toc_section_display": true,
    "toc_window_display": true
