--- a/notebooks/nb_92_Data_Collection.ipynb
+++ b/notebooks/nb_92_Data_Collection.ipynb
@@ -59,13 +59,13 @@
     "from training_rl.offline_rl.behavior_policies.behavior_policy_registry import BehaviorPolicyType\n",
     "from training_rl.offline_rl.custom_envs.custom_envs_registration import EnvFactory\n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import create_minari_datasets\n",
-    "os.environ['MUJOCO_GL'] = 'egl'\n",
+    "\n",
+    "if not os.environ.get(\"DISPLAY\"):\n",
+    "    os.environ['MUJOCO_GL'] = 'egl'\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "# To get access to the registered environments.\n",
-    "register_grid_envs()\n",
-    "\n",
-    "render_mode = RenderMode.RGB_ARRAY_LIST if os.environ.get(\"DISPLAY\") else None"
+    "register_grid_envs()"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### STEP 3: Feed dataset to Tianshou ReplayBuffer"
+    "## STEP 3: Feed dataset to Tianshou ReplayBuffer"
    ]
   },
   {
@@ -300,6 +300,15 @@
     "    snapshot_env(env)\n",
     "else:\n",
     "    raise ValueError(f\"To analyze the data the environment should be of type {Custom2DGridEnv}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "To be done together."
    ]
   },
   {
