--- a/notebooks/nb_97_Offline_rl_algorithms_exercises-revised_version.ipynb
+++ b/notebooks/nb_97_Offline_rl_algorithms_exercises-revised_version.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:53:27.996795Z",
+     "start_time": "2024-05-09T19:53:26.925119Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%%capture\n",
@@ -17,7 +22,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:53:29.266823Z",
+     "start_time": "2024-05-09T19:53:29.254411Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%presentation_style"
@@ -26,7 +36,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:53:29.481414Z",
+     "start_time": "2024-05-09T19:53:29.471813Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%load_latex_macros"
@@ -35,7 +50,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:53:29.780063Z",
+     "start_time": "2024-05-09T19:53:29.765450Z"
+    }
+   },
    "outputs": [],
    "source": [
     "%autoreload"
@@ -46,12 +66,15 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-04-29T20:30:25.731444Z",
-     "start_time": "2024-04-29T20:30:25.095932Z"
+     "end_time": "2024-05-09T19:53:31.749589Z",
+     "start_time": "2024-05-09T19:53:30.907833Z"
     }
    },
    "outputs": [],
    "source": [
+    "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
+    "load_env_variables()\n",
+    "\n",
     "import os\n",
     "import warnings\n",
     "\n",
@@ -69,7 +92,6 @@
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import \\\n",
     "    create_combined_minari_dataset \n",
     "from training_rl.offline_rl.generate_custom_minari_datasets.utils import generate_compatible_minari_dataset_name\n",
-    "from training_rl.offline_rl.load_env_variables import load_env_variables\n",
     "from training_rl.offline_rl.offline_policies.offpolicy_rendering import \\\n",
     "    offpolicy_rendering\n",
     "from training_rl.offline_rl.offline_policies.policy_registry import PolicyName\n",
@@ -89,7 +111,6 @@
     "from training_rl.offline_rl.generate_custom_minari_datasets.generate_minari_dataset_grid_envs import MinariDatasetConfig\n",
     "\n",
     "\n",
-    "load_env_variables()\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "register_grid_envs()\n",
@@ -724,17 +745,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:53:48.933903Z",
+     "start_time": "2024-05-09T19:53:48.918712Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "collected_datasets_names = [\"torcs-torcs_driver_suboptimal_and_expert-v0\"]\n",
+    "collected_datasets_names = [\"torcs-data-v0\"]\n",
     "collected_datasets = widget_list(collected_datasets_names)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:53:50.941612Z",
+     "start_time": "2024-05-09T19:53:50.928500Z"
+    }
+   },
    "outputs": [],
    "source": [
     "NUM_EPOCHS = 15\n",
@@ -753,7 +784,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:53:53.384296Z",
+     "start_time": "2024-05-09T19:53:53.366403Z"
+    }
+   },
    "outputs": [],
    "source": [
     "buffer_data = load_buffer_minari(DATA_SET_NOISY_NAME)\n",
@@ -787,6 +823,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:53:57.758669Z",
+     "start_time": "2024-05-09T19:53:57.743789Z"
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -797,7 +837,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:54:10.427826Z",
+     "start_time": "2024-05-09T19:54:06.754285Z"
+    },
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "trained_bcq_policy = restore_trained_offline_policy(offline_policy_config)\n",
@@ -812,6 +858,112 @@
     "    policy_model=trained_bcq_policy,\n",
     "    num_frames=10000,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Let's compare the expert, suboptimal and offline trained policies.** "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-05-09T19:52:15.100086Z",
+     "start_time": "2024-05-09T19:52:14.333241Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from training_rl.offline_rl.visualizations.utils import collect_data_from_rollout_torcs_policy\n",
+    "NUM_STEPS_ROLLOUT = 5000 \n",
+    "bcq_driver = collect_data_from_rollout_torcs_policy(\n",
+    "    env_collected_quantity='angle',\n",
+    "    driver_policy=trained_bcq_policy,\n",
+    "    num_steps=NUM_STEPS_ROLLOUT\n",
+    ")\n",
+    "\n",
+    "drunk_driver = collect_data_from_rollout_torcs_policy(\n",
+    "    env_collected_quantity='angle',\n",
+    "    driver_policy=BehaviorPolicyType.torcs_drunk_driver_policy,\n",
+    "    num_steps=NUM_STEPS_ROLLOUT\n",
+    ")\n",
+    "\n",
+    "expert_driver = collect_data_from_rollout_torcs_policy(\n",
+    "    env_collected_quantity='angle',\n",
+    "    driver_policy=BehaviorPolicyType.torcs_expert_policy,\n",
+    "    num_steps=NUM_STEPS_ROLLOUT\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def plot_multiple_lines(expert_data, bcq_data, drunk_data, obs_name=\"actions_driver\"):\n",
+    "    x = range(len(expert_data[obs_name]))\n",
+    "    plt.plot(x, expert_data[obs_name], label='Expert Driver')\n",
+    "    plt.plot(x, bcq_data[obs_name], label='BCQ Driver')\n",
+    "    plt.plot(x, drunk_data[obs_name], label='Drunk Driver')\n",
+    "    plt.xlabel('Time Steps')\n",
+    "    plt.ylabel(obs_name)\n",
+    "    plt.title(f'Comparison of Drivers {obs_name}')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "    \n",
+    "plot_multiple_lines(expert_driver, bcq_driver, drunk_driver)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lidar_value = 1\n",
+    "\n",
+    "expert_lidars_left = [lidar[lidar_value] for lidar in expert_driver[\"observations\"]]\n",
+    "bcq_lidars_left = [lidar[lidar_value] for lidar in bcq_driver[\"observations\"]]\n",
+    "drunk_lidars_left = [lidar[lidar_value] for lidar in drunk_driver[\"observations\"]]\n",
+    "\n",
+    "def hist_comparison(data_list, labels, x_title, bins=20, alpha=0.4, colors=None, y_range=None):\n",
+    "    \n",
+    "    if colors is None:\n",
+    "        colors = ['blue', 'orange','green']\n",
+    "\n",
+    "    for i, data in enumerate(data_list):\n",
+    "        plt.hist(data, bins=bins, density=True, alpha=alpha, color=colors[i], label=labels[i])\n",
+    "    \n",
+    "        plt.xlabel(x_title)\n",
+    "        plt.ylabel('Density')\n",
+    "        plt.title('Histogram Comparison')\n",
+    "        plt.legend()\n",
+    "        if y_range:\n",
+    "            plt.ylim(y_range[0], y_range[1])  # Change y-axis range here\n",
+    "    plt.show()\n",
+    "\n",
+    "    \n",
+    "data = [expert_lidars_left, bcq_lidars_left]\n",
+    "labels=[\"bcq\",\"behavior\"]\n",
+    "hist_comparison(data, labels, y_range=[0.0,10.5], x_title=\"observations\")\n",
+    "\n",
+    "data = [expert_driver[\"actions_driver\"], bcq_driver[\"actions_driver\"]]\n",
+    "labels=[\"bcq\",\"behavior\"]\n",
+    "hist_comparison(data, labels, y_range=[0.0,10.5], x_title=\"actions\")"
    ]
   },
   {
